Recommended music is generated. 50 songs from 5 artists for each genre could also add recommendation in genres based on artists. Country playlist are generated and their content is also generated when selected.

--- a/public/main.css
+++ b/public/main.css
@@ -184,6 +184,7 @@ html, body{
     margin-top: 8px;
     padding: 18px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    max-width: 200px;
 }
 
 .container main .trending .left .info:hover{
