--- a/public/recommendations.css
+++ b/public/recommendations.css
@@ -255,6 +255,28 @@ html, body{
     width: 100%;
 }
 
+.container main .playlist .music-list .items{
+    overflow-y: auto;
+    max-height: 750px;
+}
+
+.container main .playlist .music-list .items::-webkit-scrollbar {
+    width: 8px;
+}
+
+.container main .playlist .music-list .items::-webkit-scrollbar-thumb {
+    background-color: #888; 
+    border-radius: 10px;
+}
+
+.container main .playlist .music-list .items::-webkit-scrollbar-thumb:hover {
+    background-color: #666; 
+}
+
+.container main .playlist .music-list .items::-webkit-scrollbar-track {
+    background-color: #333; 
+}
+
 
 .container main .playlist .music-list .items .item{
     display: flex;
@@ -262,6 +284,7 @@ html, body{
     justify-content: space-between;
     margin-bottom: 20px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    margin-right: 15px;
 }
 
 .container main .playlist .music-list .items .item:hover{
