--- a/public/main.css
+++ b/public/main.css
@@ -184,7 +184,7 @@ html, body{
     margin-top: 8px;
     padding: 18px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    max-width: 200px;
+    width: 250px;
 }
 
 .container main .trending .left .info:hover{
@@ -195,19 +195,22 @@ html, body{
 }
 
 .container main .trending .left .info h2{
-    font-size: 26px;
+    font-size: 24px;
     margin-bottom: 8px;
+    overflow: hidden; 
+    max-height: 60px;
 }
 
-.container main .trending .left .info h4,
+
+/* .container main .trending .left .info h4,
 .container main .trending .left .info h5{
     display: inline;
-}
+} */
 
-.container main .trending .left .info h5{
+/* .container main .trending .left .info h5{
     margin-left: 12px;
     color: #919191;
-}
+} */
 
 .container main .trending .left .info .buttons{
     margin-top: 10px;
@@ -228,15 +231,16 @@ html, body{
 
 .container main .trending .left .info .buttons i{
     color: #5773ff;
-    font-size: 20px;
+    font-size: 25px;
     border: 2px solid #fff;
     padding: 10px;
     border-radius: 50%;
+    margin-left: 20px;
 }
 
 .container main .trending img{
-    width: 175px;
-    height: 150px;
+    width: 225px;
+    height: 250px;
 }
 
 #pagination{
