--- a/public/genres.css
+++ b/public/genres.css
@@ -41,9 +41,12 @@ html, body{
     padding: 20px 36px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     z-index: 10000;
     transition: all 0.6s ease;
+}
+
+.container .sidebar .menu{
+    margin-top: 70px;
 }
 
 .container .sidebar .logo{
