--- a/public/playlist.css
+++ b/public/playlist.css
@@ -503,6 +503,126 @@ html, body{
     cursor: pointer;
 }
 
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.menu-playlist {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    position: relative;
+    width: 300px;
+}
+
+.menu-playlist h2 {
+    margin-top: 0;
+    text-align: center;
+}
+
+.menu-playlist label{
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    position: relative;
+    margin-left: 20px;
+    bottom: 20px;
+    font-weight: 425;
+    font-size: 18px;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+.playlist-container {
+    margin-top: 20px;
+    overflow-y: auto;
+    max-height: 400px;
+    margin-bottom: 10px;
+}
+
+.playlist-container::-webkit-scrollbar {
+    width: 8px;
+}
+
+.playlist-container::-webkit-scrollbar-thumb {
+    background-color: #888; 
+    border-radius: 10px;
+}
+
+.playlist-container::-webkit-scrollbar-thumb:hover {
+    background-color: #666; 
+}
+
+.playlist-container::-webkit-scrollbar-track {
+    background-color: #c2c2c2; 
+}
+
+.playlist-checkbox {
+    margin-right: 5px;
+}
+
+.menu-playlist button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+
+.menu-playlist button:hover {
+    background-color: #0056b3;
+}
+
+
+#playlist-creation{
+    overflow-y: auto;
+    overflow-x: hidden;
+    max-height: 200px;
+    max-width: 225px;
+    text-wrap: wrap;
+    padding-right: 10px;
+}
+
+#playlist-creation li a{
+    text-overflow: ellipsis;
+}
+
+#playlist-creation::-webkit-scrollbar {
+    width: 8px;
+}
+
+#playlist-creation::-webkit-scrollbar-thumb {
+    background-color: #888; 
+    border-radius: 10px;
+}
+
+#playlist-creation::-webkit-scrollbar-thumb:hover {
+    background-color: #666; 
+}
+
+#playlist-creation::-webkit-scrollbar-track {
+    background-color: #333; 
+}
+
 @media screen and (max-width: 1400px) {
     .container .sidebar .playing .bottom p{
         font-size: 10px;
