--- a/public/recommendations.css
+++ b/public/recommendations.css
@@ -521,6 +521,8 @@ html, body{
 }
 
 
+
+
 .overlay {
     position: fixed;
     top: 0;
@@ -604,21 +606,40 @@ html, body{
     cursor: pointer;
 }
 
-/* .btn {
-    width: 100%;
-    height: 45px;
-    background: var(--primaryColor);
-    border: none;
-    outline: none;
-    border-radius: 6px;
-    cursor: pointer;
-    font-size: 1em;
-    color: var(--whiteColor);
-    font-weight: 500;
-} */
 
 .menu-playlist button:hover {
     background-color: #0056b3;
+}
+
+
+#playlist-creation{
+    overflow-y: auto;
+    overflow-x: hidden;
+    max-height: 200px;
+    max-width: 225px;
+    text-wrap: wrap;
+    padding-right: 10px;
+}
+
+#playlist-creation li a{
+    text-overflow: ellipsis;
+}
+
+#playlist-creation::-webkit-scrollbar {
+    width: 8px;
+}
+
+#playlist-creation::-webkit-scrollbar-thumb {
+    background-color: #888; 
+    border-radius: 10px;
+}
+
+#playlist-creation::-webkit-scrollbar-thumb:hover {
+    background-color: #666; 
+}
+
+#playlist-creation::-webkit-scrollbar-track {
+    background-color: #333; 
 }
 
 
