--- a/public/styles.css
+++ b/public/styles.css
@@ -354,7 +354,7 @@ html, body{
 }
 
 
-.container main .playlist .music-list .items .item{
+.container main .playlist .music-list .items .track{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -362,7 +362,7 @@ html, body{
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.container main .playlist .music-list .items .item:hover{
+.container main .playlist .music-list .items .track:hover{
     background-color: rgba(59, 59, 59, 0.979);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border-radius: 8px;
@@ -370,35 +370,35 @@ html, body{
     cursor: pointer;
 }
 
-.container main .playlist .music-list .items .item:last-child{
+.container main .playlist .music-list .items .track:last-child{
     margin-bottom: 0;
 }
 
-.container main .playlist .music-list .items .item .info,
-.container main .playlist .music-list .items .item .actions{
+.container main .playlist .music-list .items .track .info,
+.container main .playlist .music-list .items .track .actions{
     display: flex;
     align-items: center;
     gap: 20px;
 }
 
-.container main .playlist .music-list .items .item .info p{
+.container main .playlist .music-list .items .track .info p{
     color: #919191;
     font-size: 12px;
     font-weight: bold;
     margin-top: 6px;
 }
 
-.container main .playlist .music-list .items .item .info img{
+.container main .playlist .music-list .items .track .info img{
     width: 50px;
     height: 50px;
 }
 
-.container main .playlist .music-list .items .item .actions p{
+.container main .playlist .music-list .items .track .actions p{
     font-size: 13px;
     font-weight: bold;
 }
 
-.container main .playlist .music-list .items .item .actions .icon{
+.container main .playlist .music-list .items .track .actions .icon{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -408,12 +408,12 @@ html, body{
     border-radius: 6px;
 }
 
-.container main .playlist .music-list .items .item .actions .icon i{
+.container main .playlist .music-list .items .track .actions .icon i{
     font-size: 10px;
     color: #5773ff;
 }
 
-.container main .playlist .music-list .items .item .actions i{
+.container main .playlist .music-list .items .track .actions i{
     color: #919191;
     font-size: 26px;
 }
@@ -591,6 +591,96 @@ html, body{
     border-radius: 8px;
     cursor: pointer;
 }
+
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.menu-playlist {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    position: relative;
+    width: 300px;
+}
+
+.menu-playlist h2 {
+    margin-top: 0;
+    text-align: center;
+}
+
+.menu-playlist label{
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    position: relative;
+    margin-left: 20px;
+    bottom: 20px;
+    font-weight: 425;
+    font-size: 18px;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+.playlist-container {
+    margin-top: 20px;
+    overflow-y: auto;
+    max-height: 400px;
+    margin-bottom: 10px;
+}
+
+.playlist-container::-webkit-scrollbar {
+    width: 8px;
+}
+
+.playlist-container::-webkit-scrollbar-thumb {
+    background-color: #888; 
+    border-radius: 10px;
+}
+
+.playlist-container::-webkit-scrollbar-thumb:hover {
+    background-color: #666; 
+}
+
+.playlist-container::-webkit-scrollbar-track {
+    background-color: #c2c2c2; 
+}
+
+.playlist-checkbox {
+    margin-right: 5px;
+}
+
+.menu-playlist button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+
+.menu-playlist button:hover {
+    background-color: #0056b3;
+}
+
 
 @media screen and (max-width: 1400px) {
     .container .sidebar .playing .bottom p{
