--- a/public/playlist.css
+++ b/public/playlist.css
@@ -623,6 +623,20 @@ html, body{
     background-color: #333; 
 }
 
+#logout-button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+
+#logout-button:hover {
+    background-color: #0056b3;
+}
+
 @media screen and (max-width: 1400px) {
     .container .sidebar .playing .bottom p{
         font-size: 10px;
