--- a/public/recommendations.css
+++ b/public/recommendations.css
@@ -642,6 +642,19 @@ html, body{
     background-color: #333; 
 }
 
+#logout-button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+
+#logout-button:hover {
+    background-color: #0056b3;
+}
 
 @media screen and (max-width: 1400px) {
     .container .sidebar .playing .bottom p{
