--- a/public/styles.css
+++ b/public/styles.css
@@ -200,6 +200,20 @@ html, body{
     color: #fff;
 }
 
+.container main header .search select {
+    background-color: transparent;
+    border-radius: 4px;
+    border-width: 2px;
+    color: #fff;
+    outline: none;
+    cursor: pointer; 
+}
+
+.container main header .search select option {
+    background-color: #1d1d1d; 
+    color: #fff; 
+}
+
 
 .container main .trending{
     margin-top: 40px;
