Can now delete tracks, albums, playlists from liked spotify library and youCountry. Also can delete you country playlists as long as there is at least one track in the playlist...

--- a/public/playlist.css
+++ b/public/playlist.css
@@ -238,6 +238,10 @@ html, body{
     border-radius: 50%;
 }
 
+.container main .trending .left .info .buttons .bxs-check-circle{
+    cursor: default;
+}
+
 .container main .trending img{
     width: 300px;
     height: 200px;
