time and progress bar work when playing and pausing tracks. The next and previous buttons work 90% of the time but issues arise when the spotify api has a bad gateway error

--- a/public/styles.css
+++ b/public/styles.css
@@ -577,6 +577,16 @@ html, body{
     background-color: #fff;
     color: #5773ff;
     border-radius: 18px;
+    display: none;
+}
+
+.container .right-section .music-player .player-actions .buttons .pause-button{
+    /* display: none; */
+    font-size: 30px;
+    padding: 11px;
+    background-color: #fff;
+    color: #5773ff;
+    border-radius: 18px;
 }
 
 .container .right-section .music-player .player-actions .lyrics{
