seeking on tracks works, pausing, playing, auto starting next track, shuffle tracks, next/previous buttons, selecting tracks and values like current time associated with the track all work just need to make the functionality for the loop button.

--- a/public/styles.css
+++ b/public/styles.css
@@ -490,6 +490,11 @@ html, body{
     margin-bottom: 30px;
 }
 
+.container .right-section .music-player .header i,
+.container .right-section .music-player .player-actions .lyrics i{
+    cursor: default;
+}
+
 .container .right-section .music-player .song-info{
     display: flex;
     flex-direction: column;
