--- a/public/genres.css
+++ b/public/genres.css
@@ -665,66 +665,15 @@ html, body{
 
 }
 
-@media screen and (max-width: 1200px) {
-    .container main header .search{
-        width: 40%;
-    }
-
-    .container main .playlist .music-list{
-        width: 100%;
-    }
-
-    .container .right-section .music-player{
-        height: 88%;
-    }
-
-    .container .right-section .music-player .song-info img{
-        width: 220px;
-        height: 220px;
-    }
-
-    .container .right-section .music-player .song-info .description h3{
-        font-size: 22px;
-    }
-
-    .container .right-section .music-player .song-info .progress{
-        margin: 0;
-    }
-
-    .container .right-section .music-player .song-info .progress .active-line{
-        width: 80px;
-    }
-
-    .container .right-section .music-player .song-info .progress .deactive-line{
-        width: 40px;
-    }
-
-    .container .right-section .music-player .song-info .progress .active-line::before{
-        left: 80px;
-    }
-
-    .container .right-section .music-player .player-actions .buttons{
-        margin-top: 30px;
-    }
-
-    .container .right-section .music-player .player-actions .buttons .play-button{
-        padding: 10px;
-        border-radius: 16px;
-    }
-}
-
-@media screen and (max-width: 992px){
+@media screen and (max-width: 1200px){
     .container{
-        grid-template-columns: 3fr 2fr;
+        grid-template-columns: 4fr 1fr;
     }
 
     .container .sidebar{
         position: absolute;
         left: -100%;
-    }
-
-    .container .sidebar .playing{
-        display: none;
+        height: fit-content
     }
 
     .container main header .nav-links a{
@@ -732,11 +681,7 @@ html, body{
     }
 
     .container main header .search{
-        width: 38px;
-    }
-
-    .container main header .search input{
-        display: none;
+        width: auto;
     }
 
 
@@ -768,14 +713,9 @@ html, body{
     
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 900px) {
     .container{
         grid-template-columns: 1fr;
-    }
-
-
-    .container main header .search{
-        width: 40%;
     }
 
     .container main header .search input{
@@ -796,12 +736,17 @@ html, body{
     }
 
     .container .right-section .music-player .song-info img{
-        width: 300px;
+        width: 250px;
         height: 190px;
     }
 
     .container .right-section .music-player .buttons i{
         font-size: 22px;
+    }
+
+    
+    .container .right-section .music-player .buttons{
+        padding-bottom: 60px;
     }
 
 }
