--- a/public/playlist.css
+++ b/public/playlist.css
@@ -674,7 +674,7 @@ html, body{
     }
 
     .container main header .search{
-        width: 50%;
+        width: auto;
     }
 
     .container main .trending .left .info h2{
@@ -710,9 +710,6 @@ html, body{
 }
 
 @media screen and (max-width: 1200px) {
-    .container main header .search{
-        width: 40%;
-    }
 
     .container main .trending .left .info h2{
         font-size: 24px;
@@ -780,30 +777,20 @@ html, body{
     }
 }
 
-@media screen and (max-width: 992px){
+@media screen and (max-width: 1062px){
     .container{
-        grid-template-columns: 3fr 2fr;
+        grid-template-columns: 4fr 1fr;
     }
 
     .container .sidebar{
         position: absolute;
         left: -100%;
+        height: fit-content;
     }
 
-    .container .sidebar .playing{
-        display: none;
-    }
 
     .container main header .nav-links a{
         font-size: 13px;
-    }
-
-    .container main header .search{
-        width: 38px;
-    }
-
-    .container main header .search input{
-        display: none;
     }
 
     .container main .trending img{
@@ -840,19 +827,11 @@ html, body{
     
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 868px) {
     .container{
         grid-template-columns: 1fr;
     }
 
-    .container main .trending,
-    .container main .playlist{
-          display: none;  
-    }
-
-    .container main header .search{
-        width: 40%;
-    }
 
     .container main header .search input{
         display: block;
@@ -872,7 +851,7 @@ html, body{
     }
 
     .container .right-section .music-player .song-info img{
-        width: 300px;
+        width: 250px;
         height: 190px;
     }
 
@@ -880,4 +859,14 @@ html, body{
         font-size: 22px;
     }
 
+    .container .right-section .music-player .buttons{
+        padding-bottom: 60px;
+    }
+
+    .container main .playlist .music-list .items .item .actions{
+        gap: 15px;
+        padding-left: 5px;
+    }
+
+    
 }
