--- a/public/popular.css
+++ b/public/popular.css
@@ -283,7 +283,7 @@ html, body{
 
 .container .right-section{
     padding: 20px 36px 20px 0;
-    max-height: 1000px;
+    max-height: 800px;
 }
 
 .container .right-section .profile{
@@ -602,41 +602,27 @@ html, body{
     background-color: #0056b3;
 }
 
-@media screen and (max-width: 1400px) {
+@media screen and (max-width: 1540px) {
     .container .sidebar .playing .bottom p{
         font-size: 10px;
     }
 
     .container main header .search{
-        width: 50%;
+        width: auto;
     }
 
     .container main .trending .left .info h2{
-        font-size: 36px;
+        font-size: 22px;
     }
 
     .container main .trending img{
+        width: 150px;
+        height: 100px;
+    }
+
+    .container main .trending .left .info{
+        padding: 8px;
         width: 200px;
-        height: 180px;
-    }
-
-
-
-}
-
-@media screen and (max-width: 1200px) {
-    .container main header .search{
-        width: 40%;
-    }
-
-    .container main .trending .left .info h2{
-        font-size: 24px;
-    }
-
-    .container main .trending .left .info h5{
-        display: block;
-        font-size: 12px;
-        margin-left: 0;
     }
 
     .container main .trending .left .info .buttons button{
@@ -648,77 +634,22 @@ html, body{
         font-size: 14px;
     }
 
-    .container main .playlist .genres{
-        display: none;
-    }
-
-    .container main .playlist .music-list{
-        width: 100%;
-    }
-
-    .container .right-section .music-player{
-        height: 88%;
-    }
-
-    .container .right-section .music-player .song-info img{
-        width: 220px;
-        height: 220px;
-    }
-
-    .container .right-section .music-player .song-info .description h3{
-        font-size: 22px;
-    }
-
-    .container .right-section .music-player .song-info .progress{
-        margin: 0;
-    }
-
-    .container .right-section .music-player .song-info .progress .active-line{
-        width: 80px;
-    }
-
-    .container .right-section .music-player .song-info .progress .deactive-line{
-        width: 40px;
-    }
-
-    .container .right-section .music-player .song-info .progress .active-line::before{
-        left: 80px;
-    }
-
-    .container .right-section .music-player .player-actions .buttons{
-        margin-top: 30px;
-    }
-
-    .container .right-section .music-player .player-actions .buttons .play-button{
-        padding: 10px;
-        border-radius: 16px;
-    }
 }
 
-@media screen and (max-width: 992px){
+
+@media screen and (max-width: 1340px){
     .container{
-        grid-template-columns: 3fr 2fr;
+        grid-template-columns: 4fr 1fr;
     }
 
     .container .sidebar{
         position: absolute;
         left: -100%;
-    }
-
-    .container .sidebar .playing{
-        display: none;
+        height: fit-content;
     }
 
     .container main header .nav-links a{
         font-size: 13px;
-    }
-
-    .container main header .search{
-        width: 38px;
-    }
-
-    .container main header .search input{
-        display: none;
     }
 
     .container main .trending img{
@@ -750,23 +681,41 @@ html, body{
 
     .container main header .nav-links button,
     .container .sidebar .logo button{
-    display: flex;
-}
+        display: flex;
+    }
+
+    .container main .trending .left .info{
+        width: 150px;
+    }        
+
+    .container main .trending img{
+        width: 150px;
+        height: 100px;
+    }
+
+    .container main .trending .left .info{
+        padding: 5px;
+        margin-top: 0px;
+    }
+
+    .container main .trending .left .info h2{
+        font-size: 25px;
+    }
+
+    .container main .trending .left .info .buttons button{
+        padding: 10px 12px;
+        font-size: 12px;
+    }
+
+    .container main .trending .left .info .buttons i{
+        font-size: 16px;
+    }
     
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1130px) {
     .container{
         grid-template-columns: 1fr;
-    }
-
-    .container main .trending,
-    .container main .playlist{
-          display: none;  
-    }
-
-    .container main header .search{
-        width: 40%;
     }
 
     .container main header .search input{
@@ -787,12 +736,24 @@ html, body{
     }
 
     .container .right-section .music-player .song-info img{
-        width: 300px;
+        width: 250px;
         height: 190px;
     }
 
     .container .right-section .music-player .buttons i{
         font-size: 22px;
+    }
+
+    .container .right-section .music-player .buttons{
+        padding-bottom: 60px;
+    }
+
+    .container main .trending .left .info{
+        width: 200px;
+    }    
+
+    .container main .trending img{
+        width: 170px;
     }
 
 }
