volume button is added to music player all functionality of website is complete except using session storage to keep the music playing across page loading.

--- a/public/styles.css
+++ b/public/styles.css
@@ -722,6 +722,38 @@ html, body{
     background-color: #0056b3;
 }
 
+.volume-control {
+    position: relative;
+    display: inline-block;
+}
+
+.volume-control .mute-button{
+    display: none;
+} 
+
+.volume-bar {
+    position: absolute;
+    top: 0px;
+    left: -100px; /* Adjust as needed */
+    width: 100px; /* Adjust as needed */
+    height: 15px; /* Adjust as needed */
+    background-color: #ccc;
+    border-radius: 5px;
+    display: none;
+    transform: scaleX(-1);
+}
+
+.volume-bar:hover {
+    cursor: pointer;
+}
+
+.volume-level {
+    height: 100%;
+    background-color: #007bff; /* Adjust color as needed */
+    border-radius: 5px;
+}
+
+
 
 @media screen and (max-width: 1400px) {
     .container .sidebar .playing .bottom p{
