--- a/public/playlist.css
+++ b/public/playlist.css
@@ -55,6 +55,11 @@ html, body{
     gap: 6px;
 }
 
+
+#pulse-icon{
+    cursor: default;
+}
+
 .container .sidebar .logo > i{
     font-size: 24px;
     transition: all 0.3s ease;
