--- a/public/styles.css
+++ b/public/styles.css
@@ -51,6 +51,10 @@ html, body{
     gap: 6px;
 }
 
+#pulse-icon{
+    cursor: default;
+}
+
 .container .sidebar .logo > i{
     font-size: 24px;
     transition: all 0.3s ease;
