styling change to attempt to make genre single file and more space to youcountry tracks on small devices

--- a/public/genres.css
+++ b/public/genres.css
@@ -754,6 +754,10 @@ html, body{
         grid-template-columns: 1fr;
     }
 
+    .container main .playlist .genres .items {
+        grid-template-columns: 1fr;
+    }
+
     .container main header .search input{
         display: block;
     }
